[tool.poetry]
name = "pcos"
version = "0.1.0"
description = "PCOS diagnosis web app"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
catboost = "1.2.2"
langchain-pinecone = "0.0.2"
openai = "1.12.0"
streamlit = "1.30.0"
tiktoken = "0.6.0"
langchain-openai = "0.0.6"
python-dotenv = "*"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
